@@ -8,8 +8,14 @@ fftw_progs = \
 	psrflag
 endif
 
+if WITH_GSL
+gsl_progs = \
+	reducepoly
+endif
+
 bin_PROGRAMS = \
 	$(fftw_progs) \
+	$(gsl_progs) \
 	calcderiv \
 	difxcalculator \
 	tabulatedelays
@@ -19,6 +25,11 @@ calcderiv_SOURCES = \
 
 difxcalculator_SOURCES = \
 	difxcalculator.c
+
+if WITH_GSL
+reducepoly_SOURCES = \
+	reducepoly.c
+endif
 
 tabulatedelays_SOURCES = \
 	tabulatedelays.c
